--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title></title>
 </head>
 <body>
-	Captcha Source: <a href="http://www.detran.sp.gov.br/wps/PA_CNHWeb/jcaptcha?id=9999">http://www.detran.sp.gov.br/wps/PA_CNHWeb/jcaptcha?id=9999</a><br />
+	Captcha Source: <a href="https://www.e-crvsp.sp.gov.br/gever/jcaptcha?id=1523619486022">https://www.e-crvsp.sp.gov.br/gever/jcaptcha?id=1523619486022</a><br />
 	<br />
-	<div style ="width:220px;height:70px;overflow:hidden; display:inline-block"><img id="captcha" /></div> <a onclick="reload()" href="javascript:;">New Sample Captcha</a><br />
+	<div style ="width:180px;height:50px;overflow:hidden; display:inline-block"><img id="captcha" /></div> <a onclick="reload()" href="javascript:;">New Sample Captcha</a><br />
 	<input id="btnBreak" type="button" onclick="breakCaptcha()" value="Solve Captcha" /><br />
 	<div id="container" style="display:none">
-		Segmentation: <canvas id="segmentacao" width="220" height="70"></canvas><br />
+		Segmentation: <canvas id="segmentacao" width="180" height="50"></canvas><br />
 		Detected Text: <input type="text" id="ocr" />
 	</div>
 </body>
